--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
 
     /* Path mapping */
@@ -26,6 +26,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src", "components", "lib", "hooks"],
+  "include": ["src", "components", "lib", "hooks", "vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
