Fix Netlify Environment Variables and Deployment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your-project-url
-VITE_SUPABASE_ANON_KEY=your-anon-key
+# Get these from https://supabase.com/dashboard → Your Project → Settings → API
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# Twilio Configuration (for future use)
+# Twilio Configuration (optional - currently mocked)
+# Get these from https://console.twilio.com
 VITE_TWILIO_ACCOUNT_SID=AC1234567890abcdef1234567890abcdef
 VITE_TWILIO_AUTH_TOKEN=1234567890abcdef1234567890abcdef
 VITE_TWILIO_DEFAULT_NUMBER=+12312345678
