Secure Twilio Integration with Cost Protection

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,12 @@
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# Twilio Configuration (optional - currently mocked)
+# Twilio Configuration (for production)
 # Get these from https://console.twilio.com
-VITE_TWILIO_ACCOUNT_SID=AC1234567890abcdef1234567890abcdef
-VITE_TWILIO_AUTH_TOKEN=1234567890abcdef1234567890abcdef
-VITE_TWILIO_DEFAULT_NUMBER=+12312345678
+# IMPORTANT: These should be set in Supabase Edge Function environment, NOT here
+# TWILIO_ACCOUNT_SID=AC1234567890abcdef1234567890abcdef
+# TWILIO_AUTH_TOKEN=1234567890abcdef1234567890abcdef
+# TWILIO_DEFAULT_NUMBER=+12312345678
+
+# Note: Twilio credentials should be configured in Supabase Dashboard
+# Go to: Project Settings → Edge Functions → Environment Variables
