Migrate from Twilio to Vonage

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,14 @@
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# Twilio Configuration (for production)
-# Get these from https://console.twilio.com
+# Vonage Configuration (for production)
+# Get these from https://dashboard.nexmo.com
 # IMPORTANT: These should be set in Supabase Edge Function environment, NOT here
-# TWILIO_ACCOUNT_SID=AC1234567890abcdef1234567890abcdef
-# TWILIO_AUTH_TOKEN=1234567890abcdef1234567890abcdef
-# TWILIO_DEFAULT_NUMBER=+12312345678
+# VONAGE_API_KEY=your_api_key_here
+# VONAGE_API_SECRET=your_api_secret_here
+# VONAGE_APPLICATION_ID=your_application_id_here
+# VONAGE_PRIVATE_KEY=your_private_key_here
+# VONAGE_DEFAULT_NUMBER=12312345678
 
-# Note: Twilio credentials should be configured in Supabase Dashboard
+# Note: Vonage credentials should be configured in Supabase Dashboard
 # Go to: Project Settings → Edge Functions → Environment Variables
